# flea

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
FleaMonitor/: FleaMonitor.sln
FleaMonitor/FleaMonitor/: App.config  App.xaml  App.xaml.cs  FleaMonitor.csproj  MainWindow.xaml  MainWindow.xaml.cs  PlayMovieWindow.xaml  PlayMovieWindow.xaml.cs  Settings.cs
FleaMonitor/FleaMonitor/Auxiliary/: CommandProcessor.cs  Helper.cs
FleaMonitor/FleaMonitor/Dialog/: ImageWindow.xaml  ImageWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  ValueWindow.xaml  ValueWindow.xaml.cs  WaitWindow.xaml  WaitWindow.xaml.cs
FleaMonitor/FleaMonitor/FTP/: FleaFTPServer.cs
FleaMonitor/FleaMonitor/Model/: FleaDirectory.cs  FleaInfo.cs
FleaMonitor/FleaMonitor/Properties/: Settings.Designer.cs  Settings.settings
FleaMonitor/FleaMonitor/Server/: FleaServer.cs
flea-client/: Cargo.toml
flea-client/flea-client-lib/: Cargo.toml
flea-client/flea-client-lib/src/: client.rs
flea-client/src/: main.rs
flealib/: Cargo.toml
flealib/src/: browserhistory.rs  camera.rs  commandparser.rs  commandprocessor.rs  email.rs  fileencrypter.rs  fileserver.rs  fleaserver.rs  ftp.rs  hideflea.rs  keylogger.rs  lib.rs  screenshot.rs  systemcmd.rs  windowsfunctions.rs
install/: installflea.ps1
lib/: CameraLib.exp  CameraLib.lib
license/: APACHE
script/: lock.sh
src/: backdoor.rs  helper.c  hideinjector.c  lockscreen.c  main.rs  updater.rs
