[package]
name = "flea"
description = "A little server for executing remote commands."
version = "0.2.6"
edition = "2021"
keywords = ["server", "spying", "surveillance"]
authors = ["Rozen Software <rozsoft@wp.pl>"]
repository = "https://github.com/rozensoftware/flea"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "web-programming::websocket"]

[dependencies]
log = "0.4.17"
env_logger = "0.11.3"
exitcode = "1.1.2"
ctrlc = "3.3.0"
getopts = "0.2.21"
local-ip-address = "0.6.1"
flealib = {path = "flealib", features = ["camera"], version = "0.2"}

[build-dependencies]
cc = "1.0"

[profile.release]
strip = true
panic = "abort"
