[package]
name = "flealib"
version = "0.2.0"
edition = "2021"

[dependencies]
roxmltree = "0.18.0"
log = "0.4.17"
env_logger = "0.10.0"
execute = "0.2.11"
ftp = "3.0.1"
scrap = "0.5"
repng = "0.2.2"
chrono = "0.4.23"
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
device_query = "1.1.1"
process_list = "0.2.1"
winapi = {version = "0.3.9", features = ["psapi", "shellapi"]}
rusqlite = { version = "0.28.0", features = ["bundled"] }
rust-ini = "0.18"
rscam = "0.5.5"

[features]
camera = []