[package]
name = "flealib"
version = "0.2.5"
edition = "2021"

[dependencies]
roxmltree = "0.20.0"
log = "0.4.17"
env_logger = "0.11.3"
execute = "0.2.12"
ftp = "3.0.1"
scrap = "0.5"
repng = "0.2.2"
chrono = "0.4.24"
confy = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
device_query = "2.0.0"
process_list = "0.2.1"
winapi = {version = "0.3.9", features = ["psapi", "shellapi"]}
rusqlite = { version = "0.31.0", features = ["bundled"] }
rust-ini = "0.21.0"
sysinfo = "0.30.11"
lettre = "0.11"

[target.'cfg(unix)'.dependencies]
rscam = "0.5.5"

[features]
camera = []